--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,29 @@
 :root {
-    /* colors */
-    --ring-1: red;
-    --ring-1-shadow: darkred;
-    --ring-2: green;
-    --ring-2-shadow: darkgreen;
-    --ring-3: blue;
-    --ring-3-shadow: darkblue;
-    --ring-4: gold;
-    --ring-4-shadow: goldenrod;
+    /* colors and other style */
+    --ring-1: #FF9AA2;
+    --ring-1-shadow: hsl(355, 85%, 70%);
+    --ring-2: #FFDAC1;
+    --ring-2-shadow: hsl(24, 85%, 68%);
+    --ring-3: #B5EAD7;
+    --ring-3-shadow: hsl(158, 41%, 61%);
+    --ring-4: #C7CEEA;
+    --ring-4-shadow: hsl(228, 30%, 65%);
     --pole-main: lightgray;
     --pole-shadow: gray;
-    --background-color: oldlace;
+    --background-color: wheat;
+    --background-color-dimmer: oldlace;
+    --text-main: #816a4b;
+    --text-color: sandybrown;
+    --text-color-dimmer: #a0835d;
+    --background-invert-color: #4677a1;
+    --text-invert: #e7f3f8;
+    --text-color-invert: #bbdbf1;
+    --font-style: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* "perspective" constants, changes ratio of width:height */
     --tower-dx: 7em;
     --tower-dy: 4.5em;
     /* global scaling constant, based on screen height */
-    --scale: 0.8vh;
+    --scale: min(0.8vh, 0.6vw);
     /* extra lighting effects */
     --shadow: inset -2px -1px 0 4px rgba(0,0,0,0.2);
     --highlight: inset 2px 2px 0px 2px rgba(255,255,255,0.4);
@@ -24,28 +32,132 @@
 html, body { 
     margin: 0;
     font-size: var(--scale);
-    background: var(--background-color);
+    background: var(--background-color-dimmer);
+    font-family: var(--font-style);
 }
+
+/* SECTIONS */
 
 section {
     position: fixed;
     width: 100%;
     height: 100%;
+    color: var(--text-main);
 }
 .tower-game {
     display: flex;
     justify-content: space-evenly;
+    font-size: var(--scale);
+}
+.h-flex-center {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 .info-popup {
-    font-size: 5vw;
-    display: flex;
     justify-content: center;
-    align-items: center;
-    visibility: hidden;
 }
 
+/* INFO POPUP STUFF */
+
+h1 {
+    margin: 0;
+    font-size: 5vw;
+    color: transparent;
+    background: linear-gradient(90deg, var(--ring-1), var(--ring-2), var(--ring-3), var(--ring-4));
+    background-size: 600% 600%;
+    -webkit-background-clip: text;
+    background-clip: text;
+    position: relative;
+    animation: AnimationName 10s ease infinite;
+}
+
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+h1::after {
+    content: 'Tower of Hanoi';
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    text-shadow: -1px -1px 0px rgba(0,0,0,1),
+                1px 1px 0px rgba(0,0,0,1),
+                -1px 1px 0px rgba(0,0,0,1),
+                1px -1px 0px rgba(0,0,0,1),
+                0 0 2px rgba(0,0,0,1);
+}
+
+.directions {
+    margin-top: 20px;
+    background: var(--background-color);
+    width: 80%;
+    border: 4px solid var(--text-color-dimmer);
+    border-radius: 2em;
+    font-size: 2vw;
+}
+h2, h3, p, ol {
+    margin: 5px 0;
+}
+h2 {
+    margin-bottom: 20px;
+    font-size: 4vw;
+    color: var(--text-color);
+}
+h2::after {
+    content: ' ';
+    display: block;
+    width: 110%;
+    left: -5%;
+    position: relative;
+    border-bottom: 1px solid;
+    margin-bottom: 20px;
+}
+h3 {
+    font-size: 3vw;
+}
+button {
+    color: var(--background-color);
+    padding: 0.5em 2em;
+    margin: 0.5em 0;
+    border-radius: 2em;
+    font-size: 2vw;
+    background: var(--text-color);
+    border: 4px solid var(--text-color-dimmer);
+    cursor: pointer;
+}
+/* WRITE WIN STYLING HERE */
+.win {
+    margin-top: 20px;
+    color: var(--text-color-invert);
+    background: #4677a1;
+    background-size: 100%;
+    width: 80%;
+    border: 4px solid  var(--text-color-invert);
+    border-radius: 2em;
+    font-size: 2vw;
+    top: 100%;
+}
+.win h2 {
+    color: var(--text-color-invert);
+}
+.win p {
+    color: var(--text-invert);
+}
+.win button {
+    color: var(--background-invert-color);
+    background: var(--text-color-invert);
+    border: 4px solid var(--text-invert);
+}
+
+.closed {
+    display: none;
+}
+
+/* GAME STUFF */
+
 .tower {
-    outline: 1px solid magenta;
     display: flex;
     align-items: center;
     flex-direction: column-reverse;
@@ -55,15 +167,26 @@ section {
     flex-basis: 0;
     flex-grow: 1;
 }
+@keyframes bad-click {
+    0% {
+        box-shadow: 0 0 0px 0px rgba(255,0,0,0.5);
+    }
+    50% {
+        box-shadow: 0 0 20px 0px rgba(255,0,0,0.5);
+    }
+    100% {
+        box-shadow: 0 0 0px 0px rgba(255,0,0,0.5);
+    }
+}
 
 .pole { /*main body of pole*/
     position: absolute;
     background: var(--pole-shadow);
-    height: calc(14*var(--tower-dy));
+    height: calc(12.5*var(--tower-dy));
     width: var(--tower-dx);
 }
 
-.pole:before, .ring:before{ /*top and bottom part of pole, also hole in disc*/
+.pole::before, .ring::before{ /*top and bottom part of pole, also hole in disc*/
     content: ' ';
     position: absolute;
     background: var(--pole-main);
@@ -74,12 +197,12 @@ section {
     /* ellipse borders */
     border-radius: 100%;
 }
-.pole:before {
+.pole::before {
     /* move pole top down by half its height */
     margin-top: calc(-1 * calc(var(--tower-dy) / 2));
 }
 
-.pole:after { /* clip pole bottom */
+.pole::after { /* clip pole bottom */
     content: ' ';
     position: absolute;
     /* base dimensons on constant global size */
@@ -87,7 +210,7 @@ section {
     width: var(--tower-dx);
     height: var(--tower-dy);
     bottom: 0;
-    background: var(--background-color);
+    background: var(--background-color-dimmer);
     padding: 0 1px 1px 1px;
     margin: 0 -1px -1px -1px;
 }
@@ -111,9 +234,9 @@ section {
     align-items: center;
 
     /* default position change animation speed */
-    transition: all 0.3s ease-in-out;
+    transition: all 0s ease-in-out;
 }
-.ring:before {
+.ring::before {
     background: var(--ring-dynamic-color-shadow);
 }
 
@@ -134,7 +257,7 @@ section {
     /* base mask size off constant global size */
     font-size: var(--scale);
 }
-.ring .bottom, .pole:after {
+.ring .bottom, .pole::after {
     /* cut out hole in the middle of disc for pole to be visible */
     /* also cut out bottom of pole to make it look like it's going into table */
     /* https://stackoverflow.com/a/63714881 */
@@ -143,7 +266,7 @@ section {
     mask: radial-gradient(ellipse calc(0.5px + var(--tower-dx) / 2) calc(0.5px + var(--tower-dy) / 2) at top, transparent 99%,#fff 100%);
 }
 
-.ring .bottom:before {
+.ring .bottom::before {
     content: ' ';
     background: var(--ring-dynamic-color-main);
     /* grow big and strong */
@@ -159,13 +282,13 @@ section {
 }
 
 /* shadow and higlights */
-.ring, .ring .bottom:before, .pole:before {
+.ring, .ring .bottom::before, .pole::before {
     box-shadow: var(--highlight)
 }
 .ring .bottom, .pole {
     box-shadow: var(--shadow), var(--highlight)
 }
-.ring:before {
+.ring::before {
     /* darkens inside of ring */
     box-shadow: inset 0 50px 0 50px rgba(0,0,0,0.2);
 }
@@ -198,3 +321,26 @@ section {
     --ring-dynamic-color-shadow: var(--ring-4-shadow);
     font-size: 7em;
 }
+
+/* ring eror */
+
+.ring .error {
+    font-size: 4em;
+    font-family: monospace;
+    position: absolute;
+    color: red;
+    text-shadow: 0 0 10px red, 0 0 1px black, 0 0 1px black;
+    user-select: none;
+    z-index: 1;
+    animation: error 1s ease-in-out;
+}
+@keyframes error {
+    0% {transform: scale(5)}
+    5% {transform: scale(0.5)}
+    10%, 20%, 30% {transform: rotate(0deg)}
+        15% {transform: rotate(15deg)}
+        25% {transform: rotate(-15deg)}
+    80% {transform: scale(1)}
+    90% {transform: scale(1.5)}
+    100% {transform: scale(0)}
+  }
